@@ -48,7 +48,6 @@ Images/MultiFiles.tiff \
 Images/Options.tiff \
 Images/Run.tiff \
 Images/Stop.tiff \
-Images/Editor.tiff \
 Images/ProjectCenter_add.tiff \
 Images/ProjectCenter_cvs.tiff \
 Images/ProjectCenter_dist.tiff \
