@@ -306,6 +306,11 @@
 // ==== Notifications
 // ============================================================================
 
+- (void)controlTextDidEndEditing:(NSNotification *)aNotification
+{
+  [self changeCommonProjectEntry:[aNotification object]];
+}
+
 - (void)activeProjectDidChange:(NSNotification *)aNotif
 {
   PCProject *rootProject = [projectManager rootActiveProject];
@@ -430,13 +435,6 @@
   // Buttons
   [self setSearchOrderButtonsState];
 
-  [cppOptField setNextText:objcOptField];
-  [objcOptField setNextText:cOptField];
-  [cOptField setNextText:ldOptField];
-  [ldOptField setNextText:installPathField];
-  [installPathField setNextText:toolField];
-  [toolField setNextText:cppOptField];
-  
   // Retain view
   [buildAttributesView retain];
 }
@@ -594,13 +592,7 @@
   [authorDown setRefusesFirstResponder:YES];
   [authorDown setImage: [NSImage imageNamed:@"common_ArrowDown"]];
 
-  // Link textfields
-  [descriptionField setNextText:releaseField];
-  [releaseField setNextText:licenseField];
-  [licenseField setNextText:licDescriptionField];
-  [licDescriptionField setNextText:urlField];
-  [urlField setNextText:descriptionField];
-
+  // Retain view
   [projectDescriptionView retain];
 }
 
